refactor(cache): 重构缓存组件并优化日志输出
- 优化 CacheAspect 中的日志输出级别，改为 trace 级别
- 重构 CacheAutoConfiguration，新增 CacheRegistry 和 CacheFactoryRegistry- 优化 CacheLoaderResolver 中的类型匹配逻辑
- 统一 DefaultCacheRegistry、DefaultLifecycleManager等类的风格
-优化 L1CacheFactory、L2CacheFactory 等工厂类的实现
- 改进 RedisCacheSync 和 RedissonL2Cache 中的异常处理
- 重构 ScheduledCacheRefresher，优化缓存刷新逻辑
- 统一 TieredCache 中的 getter 方法实现